added some UI features, fixed mutation (probably?)

--- a/neuromod_analysis.ipynb
+++ b/neuromod_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df8d63a8",
+   "id": "708bf341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "23d828e3",
+   "id": "d2e9fd1b",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f5a5bba1",
+   "id": "cf681910",
    "metadata": {},
    "outputs": [
     {
@@ -504,27 +504,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "3f21bff6",
+   "execution_count": 31,
+   "id": "a18bd99b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(784, 100)"
+       "{'acc': 9.999999776482581e-05,\n",
+       " 'val': 0,\n",
+       " 'phys': 79510,\n",
+       " 'dominates': set(),\n",
+       " 'dominated': 0,\n",
+       " 'distance': inf}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.pareto[0]['meta']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f0bbd5",
+   "id": "c0995bb4",
    "metadata": {},
    "outputs": [],
    "source": []
